# Netual

./: BUILD_FIX.md  CODE_REVIEW.md  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  QUICKSTART.md  README.md  STATUS.md  SYNC_GUIDE.md  build-android.bat  build-android.sh
.github/workflows/: build-android.yml
android/: .gitignore  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/netual/vpn/: MainActivity.kt  NetualVpnService.kt
android/app/src/main/res/layout/: activity_main.xml
server/: Cargo.toml  deploy.sh
server/src/: main.rs
