[package]
name = "netual-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
tun = "0.6"
pnet = "0.35"
